--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,11 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-target 'PinAuto_Example', :exclusive => true do
+target 'PinAuto_Example' do
   pod "PinAuto", :path => "../"
 end
 
-target 'PinAuto_Tests', :exclusive => true do
+target 'PinAuto_Tests' do
   pod "PinAuto", :path => "../"
 
   
