fix pod compile in swift 3, update example

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,3 +10,9 @@ target 'PinAuto_Tests' do
 
   
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    puts "#{target.name}"
+  end
+end
